# Noticias-Sin-Filtro-Server

./: .gitignore  Dockerfile  Dockerfile.prod  README.md  audios.json  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  init_db.sh  manage.py  pyproject.toml  run.sh  run_prod.sh  run_web_service.sh  stop.sh  stop_prod.sh
app/audio_player/: admin.py  apps.py  urls.py
app/audio_player/migrations/: 0001_initial.py  0002_audio_date.py  0002_author_followers.py  0003_author_type.py
app/audio_player/models/: __init__.py  audio.py  author.py
app/client_dashboard/: apps.py  urls.py  views.py
app/client_dashboard/audio/: forms.py  urls.py  views.py
app/client_dashboard/authors/: forms.py  urls.py  views.py
app/client_dashboard/templates/: index.html  index2.html  login.html
app/client_dashboard/users/: admin.py  apps.py  decorators.py  forms.py  managers.py  models.py  urls.py  views.py
app/core/: __init__.py  pagination.py
app/feed/: feed.py
app/killswitch/: admin.py  apps.py  killswitch.py  models.py  viewsets.py
app/killswitch/migrations/: 0001_initial.py
app/scraper/: admin.py  apps.py  models.py  scraper.py  serializers.py  urls.py  views.py
app/scraper/fixtures/: media_sites.json
app/scraper/migrations/: 0001_initial.py  0002_alter_articleheadline_categories.py  0002_mediasite_scraping_active.py  0002_rename_date_articleheadline_datetime.py  0003_articleheadline_source.py  0003_mediasite_last_scraped_and_more.py  0004_articleheadline_url.py  (+4 more)
nginx/: Dockerfile  nginx.conf
noticias_sin_filtro_server/: asgi.py  celery.py  settings.py  tasks.py  urls.py  wsgi.py
noticias_sin_filtro_server/routers/: v0_0_1.py  v0_0_2.py
noticias_sin_filtro_server/versioning/: __init__.py  killswitch.py  viewsets.py
scrapyd/: Dockerfile  scrapyd.service
static/img/: logos.psd
vsf_crawler/: log.txt  scrapy.cfg
vsf_crawler/dbs/: default.db
vsf_crawler/vsf_crawler/: items.py  middlewares.py  pipelines.py  settings.py  utils.py
(+53 files in other folders)
