[tool.poetry]
name = "noticias_sin_filtro_server"
version = "0.1.0"
description = ""
authors = ["Maria V <65676201+marylicious@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
