[tool.poetry]
name = "noticias_sin_filtro_server"
version = "0.1.0"
description = "Server Backend for the 'noticias sin filtro' mobile app"
authors = ["Maria V <65676201+marylicious@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.2"
psycopg2-binary = "^2.9.3"
gunicorn = "^20.1.0"
django-environ = "^0.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
